--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 :root {
-  --main-bg-color: yellow;
+  --main-bg-color: #000;
+  --main-color: #fff;
+  --border-style: dashed;
 }
 
 body {
   background-color: var(--main-bg-color);
-  color: salmon;
+  color: var(--main-color);
 }
 
 button {
-  border: 1px solid #fff;
-  background-color: #000;
-  color: salmon;
+  border: 1px var(--border-style) var(--main-color);
+  background-color: var(--main-bg-color);
+  color: var(--main-color);
 }
